# hotpot-retrieval-qa

./: .gitignore  README.md  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
hotpot_retrieval_qa/: dspy_setup.py  evaluation.py  example.py  experiment_tracker.py  main.py  multihop.py  retrieval.py
hotpot_retrieval_qa/app/routes/: ask.py  health.py
hotpot_retrieval_qa/app/services/: QAService.py  RetrieverService.py
hotpot_retrieval_qa/data/: build_index.py  loader.py  processor.py
hotpot_retrieval_qa/experiments/: test_baseline_20250830_084031_9185467e.json
hotpot_retrieval_qa/training/: train.py  trainer.py
hotpot_retrieval_qa/utils/: evaluation.py
